<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_500"
    tools:context=".View.fragments.auth.LoginFragment">




    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:src="@drawable/ic_logo"
        android:layout_marginTop="65dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/playfair_display"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/imageView"

        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/background_container_login_register_recover"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">


        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/welcome"
            android:textSize="25sp"
            android:fontFamily="@font/oswald"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="15dp"
            android:textColor="@color/black"
            android:drawablePadding="5dp"
            android:background="@drawable/background_edit_text_login"
            android:layout_marginHorizontal="15dp"
            android:drawableStart="@drawable/ic_email"
            android:inputType="textEmailAddress"
            android:hint="@string/enterYourEmail"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/txtLogin"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/containerEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="15dp"
            android:singleLine="true"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/editTextEmail"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:drawablePadding="5dp"
                android:hint="@string/enterYourPassword"
                android:textColor="@color/black"
                android:drawableStart="@drawable/ic_lock"
                android:background="@drawable/background_edit_text_login"
                android:inputType="textPassword"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/recoverPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text="@string/recoverAccount"
            android:fontFamily="@font/open_sans"
            android:textAlignment="textEnd"
            android:textColor="@color/black"

            app:layout_constraintTop_toBottomOf="@+id/containerEditText"
 />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_edit_text_login"
            android:backgroundTint="@color/teal_500"
            android:text="@string/login"
            android:fontFamily="@font/open_sans"

            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/recoverPassword"
            tools:layout_editor_absoluteX="15dp" />


        <LinearLayout
            android:id="@+id/container_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="15dp"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_login">

            <TextView
                android:id="@+id/txtNotUserRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notRegisterUser"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:textSize="17sp"
                android:fontFamily="@font/open_sans"

                android:layout_marginStart="15dp"

                />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cadastre-se!"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/open_sans"

                />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <ProgressBar
        android:id="@+id/pg_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>