<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.fragments.ui.FormTaskFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back">
            <TextView
                android:id="@+id/txtToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_task_create"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:textColor="@color/white"
                android:textSize="19sp"
                />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="48dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_description"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/open_sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_create_task"
            android:drawableStart="@drawable/ic_add_task"
            android:drawablePadding="7dp"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtDescription" />

        <TextView
            android:id="@+id/taskStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/task_status"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTaskDescription" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/taskStatus"

            >

            <RadioButton
                android:id="@+id/todo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins"
                android:text="@string/todo" />

            <RadioButton
                android:id="@+id/doing"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"

                android:text="@string/doing"

                />

            <RadioButton
                android:id="@+id/done"
                android:fontFamily="@font/poppins"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/done_" />
        </RadioGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtSelectCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/task_category"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup" />

        <RadioGroup
            android:id="@+id/radioGroupCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSelectCategory">
            <RadioButton
                android:id="@+id/personal"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:button="@null"
                android:padding="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/white"
                android:background="@drawable/background_radio_button"
                android:textAlignment="center"
                android:fontFamily="@font/poppins"
                android:text="Pessoal" />

            <RadioButton
                android:id="@+id/work"

                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:fontFamily="@font/poppins"
                android:layout_height="30dp"
                android:padding="5dp"
                android:button="@null"
                android:layout_marginHorizontal="5dp"
                android:textColor="@color/white"
                android:background="@drawable/background_radio_button"
                android:textAlignment="center"
                android:text="Trabalho"

                />

            <RadioButton
                android:id="@+id/finance"

                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:padding="5dp"
                android:button="@null"
                android:layout_height="30dp"
                android:textColor="@color/white"
                android:layout_marginHorizontal="5dp"
                android:fontFamily="@font/poppins"

                android:background="@drawable/background_radio_button"
                android:textAlignment="center"
                android:text="Finanças" />



            <RadioButton
                android:id="@+id/others"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:button="@null"
                android:layout_height="30dp"
                android:fontFamily="@font/poppins"

                android:textColor="@color/white"
                android:padding="5dp"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/background_radio_button"
                android:textAlignment="center"
                android:text="Outros" />
        </RadioGroup>




        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_edit_text_login"
            android:text="@string/create"
            android:fontFamily="@font/open_sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroupCategory" />


        <ProgressBar
            android:id="@+id/pgBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>